2005-01-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm:  Disallow bootstrapping with perl 5.8.4

2005-01-22  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* Bootstrap.pm:  Allow bootstrapping with perl 5.8.6 (maybe).

2005-01-20  Daniel Macks  <dmacks@netspace.org>

	* NetAccess.pm: Un-quotemeta std URL chars that aren't shell metas.

2005-01-20  Daniel Macks  <dmacks@netspace.org>

	* NetAccess.pm: quotemeta() Source values when used in shell cmd.

2005-01-19  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: New do_calls() function processes a list of method
	and function calls.
	* Engine.pm: cmd_fetch, cmd_fetch_missing, and real_install now
	use do_calls() to handle phase_fetch*() calls.

2005-01-18  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: add new param to expand_percent() to reduce
	unknown-% from die to warn+ignore or silent+ignore.
	* PkgVersion.pm: param_expanded() silently ignores unknown %-exp.
	* Engine.pm, PkgVersion.pm: allow unknown % in DescDetail and
	DescUsage.

2005-01-17  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: Add "system-xfree86-manual-install" as a
	(non-installed) catch-all for all of Apple X11*.pkg

2005-01-17  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: (Re)introduce prompt_selection() with timeout; remove
	timeout from prompt_selection_new().
	* PkgVersion.pm: Fix error msg for buildlock failure.

2005-01-16  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: Add $timeout param to prompt() and prompt_selection_new().

2005-01-14  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Re-add missing \n in get_description.

2005-01-14  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, PkgVersion.pm: Do percent-expansion in DescDetail and DescUsage.

2005-01-13  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Fixed handling of delete_tempfile flag for execute().

2005-01-12  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Change buildlock to always lock on parent pkg.
