@@ -1,3 +1,8 @@
+2005-01-23  Daniel Macks  <dmacks@netspace.org>
+
+	* Engine.pm, Services.pm: Replace do_calls() with
+	call_queue_clear() and call_queue_add().
+
 2005-01-22  Dave Morrison  <dmrrsn@users.sourceforge.net>
 
 	* Bootstrap.pm:  Disallow bootstrapping with perl 5.8.4
